--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,10 @@ figcaption {
 
 /* Class selectors can be applied to as many elements as you like */
 
-.milk.text { /* select elements with class="milk-text" */
+.milk-text { /* select elements with class="milk-text" */
   font: bold 2.6em 'Elsie Swash Caps', cursive;
   color: white;
   text-shadow: 0 2px 3px #000;
 }
+
+/* ID selectors can be applied to one unique element per page */
